--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-register": "6.24.1",
     "compression": "1.6.2",
+    "flag-icon-css": "^3.0.0",
     "prop-types": "^15.5.10",
     "react": "15.6.1",
     "react-addons-perf": "15.4.2",
