--- a/package.json
+++ b/package.json
@@ -33,21 +33,18 @@
     "babel-plugin-dynamic-import-webpack": "1.0.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-register": "6.24.1",
-    "compression": "1.6.2",
     "flag-icon-css": "^3.0.0",
     "prop-types": "^15.5.10",
     "react": "15.6.1",
-    "react-addons-perf": "15.4.2",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
-    "styled-components": "^2.1.2",
     "webpack": "2.6.1",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -56,10 +53,10 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^2.9.1",
-    "eslint": "^4.7.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-prettier": "^2.1.1",
-    "eslint-config-react": "^1.1.7",
+    "eslint": "4.7.0",
+    "eslint-config-airbnb": "15.0.1",
+    "eslint-config-prettier": "2.1.1",
+    "eslint-config-react": "1.1.7",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
